name:                actor
version:             0.1.0.0
synopsis:            A simple Scheme-like language with actors.
license:             NCSA
build-type:          Simple
cabal-version:       >=1.10

executable main
    hs-source-dirs:     app
    main-is:            Main.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      base , unordered-containers >= 0.2 , parsec , stm
    default-language:   Haskell2010
